fixed footer being pushed by overflowing container. had to set overflow hidden on main container this whole time. added scrollbar styling as well

--- a/frontend/src/components/Footer/footer.module.css
+++ b/frontend/src/components/Footer/footer.module.css
@@ -1,6 +1,7 @@
 .footer {
-    min-height: 78px;
+    min-height: 88px;
     background-color: #000000;
     margin-top: auto; /* Make the footer stick to the bottom */
+    text-align: center;
     /* border: 2px solid red; */
 }
