--- a/frontend/src/components/Layout/layout.module.css
+++ b/frontend/src/components/Layout/layout.module.css
@@ -1,5 +1,5 @@
 
-/*! LAYOUT COMPONENT */
+/*! LAYOUT COMPONENT ------------------------------------------------------------------------ */
 
 .fullPageLayout {
   display: flex;
@@ -10,16 +10,22 @@
 .contentWrapper {
   display: flex;
   flex: 1;
-
-  margin-top: 7px;
-  margin-left: 7px;
-  margin-right: 7px;
+  overflow: hidden;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .mainContent {
   flex: 1;
-  margin-left: 7px;  /* SPACING BETWEEN MAIN LAYOUT COMPONENTS */
-  margin-right: 7px;
+
+  overflow: auto;
+  overflow-x: hidden;
+  transition: --var1 .5s;
+
+
+  margin-left: 9px;  /* SPACING BETWEEN MAIN LAYOUT COMPONENTS */
+  margin-right: 9px;
 
   padding-top: 15px;
   padding-left: 20px;
@@ -30,8 +36,9 @@
   border-radius: 15px;
 }
 
-/* Small */
-@media screen and (max-width: 990px) and (min-width: 642px) {
+
+/* Small  THESE MEDIA QUERIES SOLVE ISSUE WITH MARGIN SPACING WITH HITTING SMALL SIZE */
+@media screen and (max-width: 1023px) and (min-width: 642px) {
   .mainContent {
     margin-right: 0px;
   }
@@ -44,4 +51,41 @@
   }
 }
 
-/*! --------------- */
+/*! ------------------------------------------------------ */
+
+
+
+
+
+/*? SCROLLBAR LOGIC IN MAIN CONTAINER  */
+
+@property --var1 {  /* Needed For Fade In Transition Of Scrollbars. Cannot do transitions for scrollbars default */
+  syntax: "<color>";
+  inherits: true;
+  initial-value: transparent;
+}
+
+.mainContent:hover {    /* For Scrollbar Fade-in when navigating to container */
+  --var1: rgba(147, 145, 145, 0.6);
+}
+
+
+.mainContent::-webkit-scrollbar {
+  background: transparent;
+  width: 13px;
+}
+
+.mainContent::-webkit-scrollbar-thumb {
+  background: var(--var1);
+  height: 200px;
+  border-radius: 1px;
+}
+
+.mainContent::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(230, 226, 226, 0.6);
+}
+.mainContent::-webkit-scrollbar-thumb:active {
+  background-color: rgba(220, 217, 217, 0.8);
+}
+
+/*? ----------------------------------------------------------------- */
