--- a/frontend/src/pages/Dashboard/dashboard.module.css
+++ b/frontend/src/pages/Dashboard/dashboard.module.css
@@ -1,4 +1,1 @@
-#dashboard {
-    overflow-x: auto;
-    overflow-y: auto;
-}
+
